--- a/single files/pred/pred_voter_ORIGINAL.ipynb
+++ b/single files/pred/pred_voter_ORIGINAL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +129,10 @@
     "boost_emb = XGBClassifier()\n",
     "boost_emb.load_model('models/nlp/bal_full_xg_emb.json')\n",
     "\n",
+    "\"\"\"\"\n",
     "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/tabnet_full.zip')"
+    "nn.load_model('models/nn/tabnet_full.zip')\n",
+    "\"\"\""
    ]
   },
   {
@@ -332,26 +334,6 @@
     "if not full:\n",
     "    print(accuracy_score(results.type, results.prediction))\n",
     "    print(classification_report(results.type, results.prediction))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True, False])"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 == np.array([1,2])"
    ]
   },
   {
@@ -605,13 +587,13 @@
     "    df_submission = pd.read_csv(\"data/general/test.csv\")\n",
     "    x2 = preprocess_dataframe(df_submission, submission=True)\n",
     "    # reorder columns + add missing columns + remove extra columns\n",
-    "    x2_labels = x2.apply(extract_label_from_comment, axis=1)\n",
-    "    \n",
+    "    x2_labels = x2.apply(extract_label_from_comment, axis=1)    \n",
     "\n",
     "    results.prediction = replace_predictions(x2_labels, results.prediction)\n",
     "    submission = pd.DataFrame({'id': results.index ,'type': results.prediction})\n",
     "\n",
     "    b = results.prediction.copy().tolist()\n",
+    "\n",
     "\n",
     "    count = 0\n",
     "    for i in range(len(a)):\n",
@@ -644,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
